# agustiar-data-pipeline

./: .gitignore  README.md  agustiar_analytics.duckdb  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/: .gitignore  README.md  app.py  app.py.old  config.example.py  data_debug.py  ingestion_rapidbus_mrtfeeder.py  requirements.txt
src/app_pages/: analytics.py  data_table.py  live_map.py  route_planner.py
src/pages/: analytics.py  analytics.py.old  live_map.py  live_map.py.old
src/utils/: data_processor.py  data_processor.py.old  db.py  gtfs_static.py  ingestion.py
src_backup/: app.py  config.py
tests/: test_script.py
