[project]
name = "agustiar-data-pipeline"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "google-api-python-client>=2.188.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "pandas<3",
    "duckdb>=1.4.3",
    "streamlit>=1.53.1",
    "plotly>=6.5.2",
    "requests>=2.32.5",
    "gtfs-realtime-bindings>=2.0.0",
    "protobuf>=6.33.4",
    "streamlit-autorefresh>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/alenna_pipeline"]
