[project]
name = "malaysia-transit-tracker"
version = "2.0.0"
description = "Real-time transit tracking dashboard for Malaysia"
authors = [{name = "Agustiar Falahi", email = "your.email@example.com"}]
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "duckdb>=0.9.0",
    # ... other dependencies
]

[project.urls]
Homepage = "https://github.com/agustiarfalahi94/"
Repository = "https://github.com/agustiarfalahi94/agustiar-data-pipeline"